[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"
thiserror = "1.0.32"
tokio = { version = "1.23.0", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.28"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
