[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
regex = "1.12"
crc = "3.4"
